Fixed access violation on getting module instance

--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -57,5 +57,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
