--- a/modules/temperature/cpu_shared/cpu_shared.vcxproj
+++ b/modules/temperature/cpu_shared/cpu_shared.vcxproj
@@ -73,26 +73,26 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>output\$(PROCESSOR_ARCHITECTURE)\</OutDir>
-    <IntDir>buildstage\$(PROCESSOR_ARCHITECTURE)\</IntDir>
+    <OutDir>output\win$(PlatformArchitecture)\</OutDir>
+    <IntDir>buildstage\win$(PlatformArchitecture)\</IntDir>
     <TargetName>module_temp_cpu</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>output\$(PROCESSOR_ARCHITECTURE)\</OutDir>
-    <IntDir>buildstage\$(PROCESSOR_ARCHITECTURE)\</IntDir>
+    <OutDir>output\win$(PlatformArchitecture)\</OutDir>
+    <IntDir>buildstage\win$(PlatformArchitecture)\</IntDir>
     <TargetName>module_temp_cpu</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>output\$(PROCESSOR_ARCHITECTURE)\</OutDir>
-    <IntDir>buildstage\$(PROCESSOR_ARCHITECTURE)\</IntDir>
+    <OutDir>output\win$(PlatformArchitecture)\</OutDir>
+    <IntDir>buildstage\win$(PlatformArchitecture)\</IntDir>
     <TargetName>module_temp_cpu</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>output\$(PROCESSOR_ARCHITECTURE)\</OutDir>
-    <IntDir>buildstage\$(PROCESSOR_ARCHITECTURE)\</IntDir>
+    <OutDir>output\win$(PlatformArchitecture)\</OutDir>
+    <IntDir>buildstage\win$(PlatformArchitecture)\</IntDir>
     <TargetName>module_temp_cpu</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -106,7 +106,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>..\base_module\output\$(PROCESSOR_ARCHITECTURE)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\base_module\output\win$(PlatformArchitecture)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -120,7 +120,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>..\base_module\output\$(PROCESSOR_ARCHITECTURE)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\base_module\output\win$(PlatformArchitecture)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -138,7 +138,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\base_module\output\$(PROCESSOR_ARCHITECTURE)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\base_module\output\win$(PlatformArchitecture)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -156,7 +156,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\base_module\output\$(PROCESSOR_ARCHITECTURE)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\base_module\output\win$(PlatformArchitecture)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
