--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Native.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Logger.cs" />
+    <Compile Include="Utils\Logging\ELogLevel.cs" />
+    <Compile Include="Utils\Logging\Logger.cs" />
+    <Compile Include="Utils\Logging\SLogMessageHolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
