--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ modules/temperature/cpu_shared/buildstage
 modules/temperature/cpu_shared/output
 modules/temperature/base_module/buildstage
 modules/temperature/base_module/output
+driver/output
+driver/buildstage
+driver_bridge/buildstage
+driver_bridge/output
