--- a/driver_bridge/src/driver_bridge.vcxproj
+++ b/driver_bridge/src/driver_bridge.vcxproj
@@ -110,7 +110,8 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)driver\output\win$(PlatformArchitecture)\rhms_kernel.sys" "$(SolutionDir)server\output\$(Configuration)\bin"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -125,7 +126,8 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)driver\output\win$(PlatformArchitecture)\rhms_kernel.sys" "$(SolutionDir)server\output\$(Configuration)\bin"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -144,7 +146,8 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)driver\output\win$(PlatformArchitecture)\rhms_kernel.sys" "$(SolutionDir)server\output\$(Configuration)\bin"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,7 +166,8 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)driver\output\win$(PlatformArchitecture)\rhms_kernel.sys" "$(SolutionDir)server\output\$(Configuration)\bin"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
