--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -71,9 +71,17 @@
   <ItemGroup>
     <Compile Include="Drivers\KernelDriverInitState.cs" />
     <Compile Include="Drivers\KernelDriverBridge.cs" />
+    <Compile Include="Drivers\Kernel\BridgeDriver.cs" />
+    <Compile Include="Drivers\Kernel\Cpuid.cs" />
+    <Compile Include="Drivers\Kernel\Htl.cs" />
+    <Compile Include="Drivers\Kernel\IO.cs" />
     <Compile Include="Drivers\Kernel\Msr.cs" />
+    <Compile Include="Drivers\Kernel\Pci.cs" />
+    <Compile Include="Drivers\Kernel\Pmc.cs" />
+    <Compile Include="Drivers\Kernel\Tsc.cs" />
     <Compile Include="Modules\IModuleLoader.cs" />
     <Compile Include="Native.cs" />
+    <Compile Include="Networking\NetworkClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logging\LogLevel.cs" />
@@ -83,9 +91,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Networking\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
