--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -82,6 +82,10 @@
     <Compile Include="Drivers\Kernel\Pci.cs" />
     <Compile Include="Drivers\Kernel\Pmc.cs" />
     <Compile Include="Drivers\Kernel\Tsc.cs" />
+    <Compile Include="Drivers\Presentation\Cpuid.cs" />
+    <Compile Include="Drivers\Presentation\CpuidRegisters.cs" />
+    <Compile Include="Drivers\Presentation\CpuidCoreInfo.cs" />
+    <Compile Include="Drivers\Presentation\CpuVendor.cs" />
     <Compile Include="Modules\IModuleLoader.cs" />
     <Compile Include="Native.cs" />
     <Compile Include="Networking\NetworkClient.cs" />
