--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -19,6 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\output\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\buildstage\$(Configuration)\</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,6 +31,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\output\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\buildstage\$(Configuration)\</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -40,6 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\output\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\buildstage\x64\$(Configuration)\</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -50,6 +53,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>..\output\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\buildstage\x64\$(Configuration)\</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -57,6 +61,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>AppConfig\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
@@ -82,30 +89,57 @@
     <Compile Include="Drivers\Kernel\Pci.cs" />
     <Compile Include="Drivers\Kernel\Pmc.cs" />
     <Compile Include="Drivers\Kernel\Tsc.cs" />
-    <Compile Include="Drivers\NT\NativeNt.cs" />
-    <Compile Include="Drivers\NT\SSystemProcessorPerformanceInformation.cs" />
-    <Compile Include="Drivers\NT\SystemInformationClass.cs" />
+    <Compile Include="Hardware\GPU\BaseGpuSensor.cs" />
+    <Compile Include="Hardware\SensorType.cs" />
+    <Compile Include="Hardware\GPU\GpuSensorThermal.cs" />
+    <Compile Include="Hardware\IHardware.cs" />
+    <Compile Include="Hardware\ISensor.cs" />
+    <Compile Include="Modules\Helpers\FunctionIdAttribute.cs" />
+    <Compile Include="Modules\Helpers\LinkedFunctionIdBaseAttribute.cs" />
+    <Compile Include="Utils\AssemblyUtils.cs" />
+    <Compile Include="Utils\Natives\SSystemProcessorPerformanceInformation.cs" />
+    <Compile Include="Utils\Natives\SystemInformationClass.cs" />
     <Compile Include="Drivers\Presentation\Cpuid.cs" />
     <Compile Include="Drivers\Presentation\CpuidRegisters.cs" />
     <Compile Include="Drivers\Presentation\CpuidCoreInfo.cs" />
     <Compile Include="Drivers\Presentation\CpuVendor.cs" />
+    <Compile Include="Drivers\Presentation\GenericGpuSensor.cs" />
+    <Compile Include="Drivers\Presentation\GpuVendor.cs" />
+    <Compile Include="Drivers\Presentation\Sensors\LoadingGpuSensor.cs" />
+    <Compile Include="Drivers\Presentation\Sensors\ThermalGpuSensor.cs" />
     <Compile Include="Hardware\CPU\GenericCpu.cs" />
+    <Compile Include="Hardware\GPU\GenericGpu.cs" />
+    <Compile Include="Hardware\HardwareIdentifer.cs" />
     <Compile Include="Hardware\HardwareType.cs" />
+    <Compile Include="Modules\Base\BaseCollectingServer.cs" />
+    <Compile Include="Modules\Base\BaseModule.cs" />
+    <Compile Include="Modules\Base\BaseModuleLoader.cs" />
+    <Compile Include="Modules\ICollectingServer.cs" />
+    <Compile Include="Modules\ICollectingServerLogger.cs" />
+    <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\IModuleLoader.cs" />
-    <Compile Include="Native.cs" />
+    <Compile Include="Modules\ModuleLoadingException.cs" />
+    <Compile Include="Modules\ModuleState.cs" />
+    <Compile Include="Modules\Extended\ServerModuleLoader.cs" />
+    <Compile Include="Utils\Native.cs" />
     <Compile Include="Networking\NetworkClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RhmsCollectingServer.cs" />
     <Compile Include="Tests\DriverTest.cs" />
     <Compile Include="Utils\Logging\LogLevel.cs" />
     <Compile Include="Utils\Logging\Logger.cs" />
     <Compile Include="Utils\Logging\LogMessageHolder.cs" />
+    <Compile Include="Utils\Logging\BaseModuleLogger.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="AppConfig\App.config" />
+    <None Include="AppConfig\app.manifest" />
+    <None Include="AppConfig\packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Backend\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
