Fixed exception logger format on loading modules Link fan, temperature and adapter info ADL methods

--- a/modules/gpu/radeon/gpu_radeon.csproj
+++ b/modules/gpu/radeon/gpu_radeon.csproj
@@ -49,6 +49,11 @@
     <Compile Include="Api\Hardware\Sensors\SensorRadeonTemperature.cs" />
     <Compile Include="Api\Helpers\LinkedDelegateAttribute.cs" />
     <Compile Include="Api\Helpers\LinkedFieldAttribute.cs" />
+    <Compile Include="Api\Structures\AdlAdapterInfo.cs" />
+    <Compile Include="Api\Structures\ADLFanSpeedInfo.cs" />
+    <Compile Include="Api\Structures\AdlFanSpeedValue.cs" />
+    <Compile Include="Api\Structures\AdlpmActivity.cs" />
+    <Compile Include="Api\Structures\AdlTemperature.cs" />
     <Compile Include="ModuleGpuRadeon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
