--- a/modules/gpu/radeon/gpu_radeon.csproj
+++ b/modules/gpu/radeon/gpu_radeon.csproj
@@ -46,6 +46,11 @@
     <Compile Include="Api\Enums\AdlStatus.cs" />
     <Compile Include="Api\Hardware\RadeonGpu.cs" />
     <Compile Include="Api\Hardware\RadeonGpuIdentifer.cs" />
+    <Compile Include="Api\Hardware\Sensors\Base\SensorBaseRadeonLoad.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadCoreActivity.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadEngine.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadMemory.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadVddc.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonTemperature.cs" />
     <Compile Include="Api\Helpers\LinkedDelegateAttribute.cs" />
     <Compile Include="Api\Helpers\LinkedFieldAttribute.cs" />
