Hide module access to kernel driver classes, change gpu sensor registration (attribute based now) and more fixes

--- a/modules/gpu/radeon/gpu_radeon.csproj
+++ b/modules/gpu/radeon/gpu_radeon.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Api\Hardware\RadeonGpu.cs" />
     <Compile Include="Api\Hardware\RadeonGpuIdentifer.cs" />
     <Compile Include="Api\Hardware\Sensors\Base\SensorBaseRadeonLoad.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonFanSpeed.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadCoreActivity.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadEngine.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadMemory.cs" />
