--- a/driver/src/driver.vcxproj
+++ b/driver/src/driver.vcxproj
@@ -145,6 +145,7 @@
     <OutDir>..\output\win$(PlatformArchitecture)\</OutDir>
     <IntDir>..\buildstage\win$(PlatformArchitecture)\</IntDir>
     <TargetName>rhms_kernel</TargetName>
+    <EnableInf2cat>true</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
