--- a/server/src/Server.csproj
+++ b/server/src/Server.csproj
@@ -79,6 +79,7 @@
     <ApplicationManifest>AppConfig\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+	<Reference Include="netstandard" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
